mobile alignment fix for year change drop down

--- a/htmx-calendar/assets/css/styles.css
+++ b/htmx-calendar/assets/css/styles.css
@@ -203,8 +203,8 @@
   .top-8 {
     top: calc(var(--spacing) * 8);
   }
-  .right-0 {
-    right: calc(var(--spacing) * 0);
+  .-right-11 {
+    right: calc(var(--spacing) * -11);
   }
   .right-3 {
     right: calc(var(--spacing) * 3);
